# hyperliquid-stock-funding

./: .env.example  Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: core.rs
