[package]
name = "hyperliquid-stock-funding"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hl-stock-funding"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.5.51", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
